update mapping & drop_elements

--- a/JacksonTest/RandomForest_jackson.ipynb
+++ b/JacksonTest/RandomForest_jackson.ipynb
@@ -479,13 +479,12 @@
     "- product class\n",
     "- product size\n",
     "- gender\n",
-    "- wealth segment\n",
     "- own cars"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -501,13 +500,86 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dataset['brand'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "product_line\n",
+       "Standard    13870\n",
+       "Road         3876\n",
+       "Touring      1193\n",
+       "Mountain      415\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset['product_line'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "product_class\n",
+       "medium    13498\n",
+       "high       2946\n",
+       "low        2910\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset['product_class'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "product_size\n",
+       "medium    12703\n",
+       "large      3886\n",
+       "small      2765\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset['product_size'].value_counts()"
    ]
   },
   {
@@ -520,7 +592,24 @@
     "for data in dataset:\n",
     "    # mapping brand names to numbers\n",
     "    data['brand'] = data['brand'].map({'Solex': 1, 'Giant Bicycles': 2, 'WeareA2B': 3, \n",
-    "                                       'OHM Cycles': 4, 'Trek Bicycles':5, 'Norco Bicycles':6}).astype(int)"
+    "                                       'OHM Cycles': 4, 'Trek Bicycles':5, 'Norco Bicycles':6}).astype(int)\n",
+    "    \n",
+    "    # mapping product line names to numbers\n",
+    "    data['product_line'] = data['product_line'].map({'Mountain': 1, 'Road': 2, 'Touring': 3, 'Standard':4}).astype(int)\n",
+    "\n",
+    "    # mapping product class names to numbers\n",
+    "    data['product_class'] = data['product_class'].map({'low': 1, 'medium': 2, 'high':3}).astype(int)\n",
+    "\n",
+    "    # mapping product size names to numbers\n",
+    "    data['product_size'] = data['product_size'].map({'small': 1, 'medium': 2, 'large':3}).astype(int)\n",
+    "\n",
+    "    # mapping gender to numbers\n",
+    "    data['gender'] = data['gender'].map({'Male': 0, 'Female': 1}).astype(int)\n",
+    "\n",
+    "    # mapping owns_car to numbers\n",
+    "    data['owns_car'] = data['owns_car'].map({'Yes': 1, 'No': 0}).astype(int)\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -537,7 +626,7 @@
    "outputs": [],
    "source": [
     "# labels are ranks\n",
-    "drop_elements = ['transaction_id','customer_id','transaction_date','oder_status',\n",
+    "drop_elements = ['transaction_id','customer_id','transaction_date','oder_status', 'wealth_segment',\n",
     "                 'first_name','last_name','DOB','job_title','job_industry','deceased','detai_cust_title']\n",
     "# drop non-numeric columns\n",
     "x = dataset.drop(drop_elements, axis=1)\n",
