--- a/JacksonTest/RandomForest_jackson.ipynb
+++ b/JacksonTest/RandomForest_jackson.ipynb
@@ -584,30 +584,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# mapping features to numbers\n",
-    "for data in dataset:\n",
-    "    # mapping brand names to numbers\n",
-    "    data['brand'] = data['brand'].map({'Solex': 1, 'Giant Bicycles': 2, 'WeareA2B': 3, \n",
-    "                                       'OHM Cycles': 4, 'Trek Bicycles':5, 'Norco Bicycles':6}).astype(int)\n",
-    "    \n",
-    "    # mapping product line names to numbers\n",
-    "    data['product_line'] = data['product_line'].map({'Mountain': 1, 'Road': 2, 'Touring': 3, 'Standard':4}).astype(int)\n",
     "\n",
-    "    # mapping product class names to numbers\n",
-    "    data['product_class'] = data['product_class'].map({'low': 1, 'medium': 2, 'high':3}).astype(int)\n",
+    "# mapping brand names to numbers\n",
+    "dataset['brand'] = dataset['brand'].map({'Solex': 1, 'Giant Bicycles': 2, 'WeareA2B': 3, \n",
+    "                                    'OHM Cycles': 4, 'Trek Bicycles':5, 'Norco Bicycles':6}).astype(int)\n",
     "\n",
-    "    # mapping product size names to numbers\n",
-    "    data['product_size'] = data['product_size'].map({'small': 1, 'medium': 2, 'large':3}).astype(int)\n",
+    "# mapping product line names to numbers\n",
+    "dataset['product_line'] = dataset['product_line'].map({'Mountain': 1, 'Road': 2, 'Touring': 3, 'Standard':4}).astype(int)\n",
     "\n",
-    "    # mapping gender to numbers\n",
-    "    data['gender'] = data['gender'].map({'Male': 0, 'Female': 1}).astype(int)\n",
+    "# mapping product class names to numbers\n",
+    "dataset['product_class'] = dataset['product_class'].map({'low': 1, 'medium': 2, 'high':3}).astype(int)\n",
     "\n",
-    "    # mapping owns_car to numbers\n",
-    "    data['owns_car'] = data['owns_car'].map({'Yes': 1, 'No': 0}).astype(int)\n",
+    "# mapping product size names to numbers\n",
+    "dataset['product_size'] = dataset['product_size'].map({'small': 1, 'medium': 2, 'large':3}).astype(int)\n",
+    "\n",
+    "# mapping gender to numbers\n",
+    "dataset['gender'] = dataset['gender'].map({'Male': 0, 'Female': 1}).astype(int)\n",
+    "\n",
+    "# mapping owns_car to numbers\n",
+    "dataset['owns_car'] = dataset['owns_car'].map({'Yes': 1, 'No': 0}).astype(int)\n",
     "\n",
     "    "
    ]
